rifa/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rifa
  namespace: mauriciovelez
  labels:
    app: rifa
spec:
  type: ClusterIP
  selector:
    app: rifa
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
